# zulip-client

./: .gitignore  .mcp.json  PLAN.md  PROMPT.md  README.md  package.json  pyproject.toml  summary.json
.claude/: CLAUDE.md  settings.local.json
mcp/: pyproject.toml
mcp/zulip_client_mcp/: __init__.py  server.py
src/: index.ts
src/api/: client.ts  types.ts
src/cli/: export.ts  sync.ts  unread.ts
src/config/: credentials.ts
src/storage/: database.ts  json-export.ts  schema.ts
zulip_client/: __init__.py  __main__.py  api.py  cli.py  credentials.py  database.py  export.py  summarize.py
